guestbook-ingress/guestbook-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
spec:
  type: NodePort
  ports:
  - port: 9080
    targetPort: 9080
  selector:
    app: guestbook-ui
