guestbook-ingress/guestbook-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: guestbook.192.168.64.2.nip.io
    http:
      paths:
      - backend:
          serviceName: guestbook-ui
          servicePort: 80
